hphp/hack/test/typecheck/expression_trees/unbound_variables.php.like_types.exp
File "unbound_variables.php", line 9, characters 13-14:
Variable `$x` is undefined, or not always defined. (Naming[2050])
File "unbound_variables.php", line 9, characters 18-18:
Typing error (Typing[4110])
  File "unbound_variables.php", line 9, characters 18-18:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
